--- a/eTools Ultimate/Views/Pages/DashboardPage.xaml
+++ b/eTools Ultimate/Views/Pages/DashboardPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:converters="clr-namespace:eTools_Ultimate.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages"
@@ -19,16 +20,23 @@
 
 
     <Page.Resources>
+        <!-- Converters -->
+        <converters:MaxTextWidthConverter x:Key="MaxTextWidthConverter" />
+        
         <!--  Template for navigation cards  -->
         <DataTemplate x:Key="NavigationCardTemplate">
             <Border
-                Width="150"
                 Height="160"
                 Margin="8"
                 Background="#2D2D2D"
                 CornerRadius="12"
                 Cursor="Hand"
                 Tag="{Binding}">
+                <Border.Width>
+                    <Binding Path="DataContext.NavigationCards" 
+                             RelativeSource="{RelativeSource AncestorType=ItemsControl}" 
+                             Converter="{StaticResource MaxTextWidthConverter}" />
+                </Border.Width>
                 <Border.Style>
                     <Style TargetType="Border">
                         <Style.Triggers>
@@ -196,7 +204,8 @@
                                     </Style>
                                 </Button.Style>
                                 <Border
-                                    Width="120"
+                                    MinWidth="120"
+                                    MaxWidth="180"
                                     Height="36"
                                     Margin="12"
                                     HorizontalAlignment="Left"
