Revamp update window UI and localization
Improves the AvailableUpdateWindow with a redesigned UI, clearer version comparison, and new update action buttons. Adds localized strings for update-related texts in German and French. Refactors AboutViewModel to show the update window and handle errors. Cleans up AboutPage scroll viewer properties for better layout.

--- a/eTools Ultimate/Views/Pages/Settings/AboutPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/AboutPage.xaml
@@ -11,9 +11,7 @@
     Title="AboutPage"
     d:DataContext="{d:DesignInstance vm:AboutViewModel,
                                      IsDesignTimeCreatable=False}"
-    d:DesignHeight="450"
     d:DesignWidth="800"
-    ScrollViewer.CanContentScroll="False"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -21,7 +19,11 @@
     </Page.Resources>
 
     <Grid>
-        <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <ScrollViewer VerticalScrollBarVisibility="Auto" 
+                      HorizontalScrollBarVisibility="Disabled"
+                      CanContentScroll="False"
+                      PanningMode="VerticalOnly"
+                      IsManipulationEnabled="True">
             <StackPanel Margin="20">
                 <!--  App Logo und Titel  -->
                 <StackPanel Margin="0,20,0,40" HorizontalAlignment="Center">
