AboutPage mouse scroll fix

--- a/eTools Ultimate/Views/Pages/Settings/AboutPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/AboutPage.xaml
@@ -12,6 +12,7 @@
     d:DataContext="{d:DesignInstance vm:AboutViewModel,
                                      IsDesignTimeCreatable=False}"
     d:DesignWidth="800"
+    ScrollViewer.CanContentScroll="False"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -19,11 +20,12 @@
     </Page.Resources>
 
     <Grid>
-        <ScrollViewer VerticalScrollBarVisibility="Auto" 
-                      HorizontalScrollBarVisibility="Disabled"
-                      CanContentScroll="False"
-                      PanningMode="VerticalOnly"
-                      IsManipulationEnabled="True">
+        <ScrollViewer
+            CanContentScroll="False"
+            HorizontalScrollBarVisibility="Disabled"
+            IsManipulationEnabled="True"
+            PanningMode="VerticalOnly"
+            VerticalScrollBarVisibility="Auto">
             <StackPanel Margin="20">
                 <!--  App Logo und Titel  -->
                 <StackPanel Margin="0,20,0,40" HorizontalAlignment="Center">
