--- a/eTools Ultimate/Views/Pages/Settings/AboutPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/AboutPage.xaml
@@ -24,7 +24,7 @@
                       CanContentScroll="False"
                       PanningMode="VerticalOnly"
                       IsManipulationEnabled="True">
-            <StackPanel Margin="20">
+            <StackPanel Margin="40">
                 <!--  App Logo und Titel  -->
                 <StackPanel Margin="0,20,0,40" HorizontalAlignment="Center">
                     <Image
@@ -47,14 +47,14 @@
                             Margin="0,0,0,10"
                             FontSize="16"
                             FontWeight="SemiBold"
-                            Text="{i18n:StringLocalizer 'About eTools Ultimate'}" />
+                            Text="Über eTools Ultimate" />
 
                         <TextBlock
                             Margin="0,0,0,15"
                             Text="{Binding AppDescription}"
                             TextWrapping="Wrap" />
 
-                        <TextBlock Text="{i18n:StringLocalizer 'Our tool simplifies the editing process for developers.'}" TextWrapping="Wrap" />
+                        <TextBlock Text="Unser Tool vereinfacht den Bearbeitungsprozess für Entwickler." TextWrapping="Wrap" />
                     </StackPanel>
                 </ui:Card>
 
@@ -65,7 +65,7 @@
                             Margin="0,0,0,10"
                             FontSize="16"
                             FontWeight="SemiBold"
-                            Text="{i18n:StringLocalizer 'Main Features'}" />
+                            Text="Hauptfunktionen" />
 
                         <StackPanel Margin="10,0,0,0">
                             <Grid Margin="0,0,0,8">
@@ -82,7 +82,7 @@
 
                                 <TextBlock
                                     Grid.Column="1"
-                                    Text="{i18n:StringLocalizer 'Editing of .txt, .h and .inc files with structured interfaces'}"
+                                    Text="Bearbeitung von .txt, .h und .inc Dateien mit strukturierten Benutzeroberflächen"
                                     TextWrapping="Wrap" />
                             </Grid>
 
@@ -100,7 +100,7 @@
 
                                 <TextBlock
                                     Grid.Column="1"
-                                    Text="{i18n:StringLocalizer 'Advanced categorization by element types'}"
+                                    Text="Erweiterte Kategorisierung nach Elementtypen"
                                     TextWrapping="Wrap" />
                             </Grid>
 
@@ -118,7 +118,7 @@
 
                                 <TextBlock
                                     Grid.Column="1"
-                                    Text="{i18n:StringLocalizer 'Optimized for performance and user-friendliness'}"
+                                    Text="Optimiert für Leistung und Benutzerfreundlichkeit"
                                     TextWrapping="Wrap" />
                             </Grid>
                         </StackPanel>
@@ -132,7 +132,7 @@
                             Margin="0,0,0,10"
                             FontSize="16"
                             FontWeight="SemiBold"
-                            Text="{i18n:StringLocalizer 'Development Team'}" />
+                            Text="Entwicklungsteam" />
 
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -206,7 +206,7 @@
                             Margin="0,0,0,10"
                             FontSize="16"
                             FontWeight="SemiBold"
-                            Text="{i18n:StringLocalizer 'System Requirements'}" />
+                            Text="Systemanforderungen" />
 
                         <Grid Margin="0,0,0,5">
                             <Grid.ColumnDefinitions>
@@ -214,8 +214,8 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock FontWeight="SemiBold" Text="{i18n:StringLocalizer 'Operating System:'}" />
-                            <TextBlock Grid.Column="1" Text="{i18n:StringLocalizer 'Windows 10/11'}" />
+                            <TextBlock FontWeight="SemiBold" Text="Betriebssystem:" />
+                            <TextBlock Grid.Column="1" Text="Windows 10/11" />
                         </Grid>
 
                         <Grid Margin="0,0,0,5">
@@ -224,8 +224,8 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock FontWeight="SemiBold" Text="{i18n:StringLocalizer 'Memory:'}" />
-                            <TextBlock Grid.Column="1" Text="{i18n:StringLocalizer '4 GB RAM minimum, 8 GB recommended'}" />
+                            <TextBlock FontWeight="SemiBold" Text="Arbeitsspeicher:" />
+                            <TextBlock Grid.Column="1" Text="4 GB RAM mindestens, 8 GB empfohlen" />
                         </Grid>
 
                         <Grid Margin="0,0,0,5">
@@ -234,8 +234,8 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock FontWeight="SemiBold" Text="{i18n:StringLocalizer 'Disk Space:'}" />
-                            <TextBlock Grid.Column="1" Text="{i18n:StringLocalizer '200 MB available space'}" />
+                            <TextBlock FontWeight="SemiBold" Text="Festplattenspeicher:" />
+                            <TextBlock Grid.Column="1" Text="200 MB verfügbarer Speicherplatz" />
                         </Grid>
                     </StackPanel>
                 </ui:Card>
@@ -248,9 +248,9 @@
                     <Button
                         Margin="0,0,15,0"
                         Command="{Binding OpenWebsiteCommand}"
-                        Content="Visit Website" />
+                        Content="Website besuchen" />
 
-                    <Button Command="{Binding CheckForUpdatesCommand}" Content="Check for Updates" />
+                    <Button Command="{Binding CheckForUpdatesCommand}" Content="Nach Updates suchen" />
                 </StackPanel>
 
                 <!--  Copyright  -->
