--- a/eTools Ultimate/Views/Windows/AvailableUpdateWindow.xaml
+++ b/eTools Ultimate/Views/Windows/AvailableUpdateWindow.xaml
@@ -250,6 +250,7 @@
                     Height="40"
                     Margin="0,0,0,12"
                     HorizontalAlignment="Center"
+                    RenderOptions.BitmapScalingMode="HighQuality"
                     Source="/Assets/Icons/eTools.png" />
 
                 <!--  Title  -->
